# udi-editor

./: .gitignore  Makefile  README.md  build.json  build.plugin.js  package.json  tsconfig.json
proto/: account.proto  networks.proto  service.proto  storage.proto  system.proto  worker.proto
public/: editor.html  index.html
src/: global.scss  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: browser.rs  mod.rs  windows.rs
src-tauri/src/commands/idns/: mod.rs
src-tauri/src/udi/: database.rs  mod.rs  schema.sql
src/apps/editor/: global.scss  index.module.less  index.tsx  plugin.tsx
src/apps/pagemgr/: index.module.less  index.tsx  pagemgr-left-sider.module.less  pagemgr-left-sider.tsx
src/apps/settings/: index.less  index.tsx  left-sider.less  left-sider.tsx
src/components/: index.ts
src/components/browser/: index.ts  ipfs-browser.less  ipfs-browser.tsx
src/components/header/: idns-header.tsx  index.tsx  login-header.module.less  login-header.tsx  (+4 more)
src/desktop/: index.module.less  index.tsx
src/grpc/: account_pb.d.ts  account_pb.js  networks_pb.d.ts  networks_pb.js  service_pb.d.ts  service_pb.js  storage_pb.d.ts  storage_pb.js  system_pb.d.ts  system_pb.js  worker_pb.d.ts  worker_pb.js
src/login/: import-and-login.tsx  index.module.less  index.tsx  login.module.less  login.tsx
src/services/: ability-service.ts  account-service.ts  file-system-service.ts  idns-request.ts  index.ts  pagemgr-draft-service.ts  pagemgr-published-service.ts
src/utils/: Request.ts  index.ts  property.ts  utils.ts
(+10 files in other folders)
